opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/charinfo_width/"
bug-reports: "https://github.com/kandu/charinfo_width/issues"
license: "MIT"
dev-repo: "git+https://github.com/kandu/charinfo_width.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & (ocaml:version >= "4.04.0")}
]
depends: [
  "ocaml" {>= "4.02.3"}
  "result"
  "camomile" {>= "2.0.0" & < "3.0~"}
  "dune" {>= "1.4"}
  "ppx_expect" {with-test}
]

synopsis: "Determine column width for a character"
description: """
This module is implemented purely in OCaml and the width function follows the prototype of POSIX's wcwidth."""

